# cpp_eduproject

./: CMakeLists.txt  Makefile  eduproject.sln
eduproject/: client.cpp  eduproject.vcxproj  file1.cpp  file1.hpp  file2.cpp  file2.hpp  main.cpp  server.hpp  sync_tcp_client.hpp
src/: HTTPClient.hpp  HTTPRequest.hpp  HTTPResponse.hpp  acceptor.hpp  async_tcp_client.hpp  client.cpp  http_errors_category.hpp  main.cpp  server.hpp  service.hpp  session.hpp  sync_udp_client.hpp
sslclient/: client.cpp  sync_ssl_client.hpp
